# Earth-OS-Pilot-B

./: DEPLOYMENT-DEMO.md  OSA-Reference-Architecture-v1.0.md  P1-COMPLETE.md  PHASE1-COMPLETE.md  PRODUCTION-DEPLOYMENT.md  README.md  RELEASE-LINEAGE.md  REPOSITORY-STRATEGY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml  mirror-to-earth-os-pilot-b.yml
api/gateway/: Dockerfile  (+1 more)
cluster-b/: Dockerfile
compliance-package/: COMPLIANCE-PACKAGE-README.md
conformance/: package.json  tsconfig.json
constitution/: OSA-ACC-v1.0.md  OSA-Constitution-v1.0.md  OSA-ECED-v1.0.md
docs/: architecture.md  ciems-alignment.md
evidence/: CESF-TRACEABILITY.md  EVIDENCE-PACKAGE.md
releases/: RELEASE-RECORD-SCHEMA.yaml
schemas/: README.md
scripts/: setup-secrets.sh
sdk/cgl-rust/: Cargo.toml
sdk/cgl-rust/src/: lib.rs
sdk/cgl-rust/src/clients/: agent.rs  decision.rs  evidence.rs  federation.rs  kernel.rs  mission.rs  policy.rs  simulation.rs
sdk/cgl-rust/src/types/: mod.rs
skills/: conformance-verification-report.md  cross-domain-governance-alignment-implementation.md  evidence-correlation-analysis-implementation.md  federated-governance-implementation.md  skill-governance-integration.md
specs/: OSA-API-Specifications-v1.0.md  OSA-CGL-v1.0.md  OSA-Conformance-Specification-v1.0.md  OSA-Evidence-Specification-v1.0.md  OSA-Runtime-Specifications-v1.0.md
sx-ck-integration/: conformance-verification-report.md  constitutional-kernel-integration-implementation.md  skill-governance-integration.md  sx-ck-kernel-integration.md
(+88 files in other folders)
