[package]
name = "osa-cgl"
version = "1.0.0"
edition = "2021"
description = "OSA Constitutional Governance Library - Rust SDK"
license = "Apache-2.0 OR MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Cryptography
ed25519-dalek = "2.0"
sha3 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
futures = "0.3"
async-trait = "0.1"

# Config
config = "0.14"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"